--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -15,7 +15,10 @@ spring:
     devtools:
       livereload: 
       enabled: true
+    freemarker:
+    cache: false
 
+    
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul
